--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,18 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-fastapi = "^0.78.0"
+fastapi = "^0.111.0"
 fastapi-utils = "^0.2.1"
 uvicorn = "^0.18.2"
 gunicorn = "^20.1.0"
 python-dotenv = "^0.20.0"
-pymongo = {version = "4.1.1", extras = ["srv"]}
 mongoengine = "^0.24.1"
 loguru = "^0.6.0"
 requests = "^2.28.1"
+anyio = "^4.4.0"
+httpx = "^0.27.0"
+pytest-anyio = "^0.0.0"
+pytest-mongodb = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 essential-generators = "^1.0"
